src/objects/FPA_Link__c.object
<CustomObject>
    <fields>
        <fullName>FPA_Job_Name__c</fullName>
        <formula>FPA__r.Name</formula>
        <label>FPA Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPA_Total_Drafting_Hours__c</fullName>
        <label>FPA Total Drafting Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPA_Total_Engineering_Hours__c</fullName>
        <label>FPA Total Engineering Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPA_Total_Manufacturing_Hours__c</fullName>
        <label>FPA Total Manufacturing Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPA__c</fullName>
        <label>FPA</label>
        <referenceTo>Factory_Pricing_Authorization__c</referenceTo>
        <relationshipLabel>Unit Details</relationshipLabel>
        <relationshipName>Related_SFO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Identifier__c</fullName>
        <formula>SFO__r.Parent_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Identifier__c</fullName>
        <formula>SFO__r.Name__c</formula>
        <label>SFO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Cost__c</fullName>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time(wks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Margin__c</fullName>
        <formula>IF(Net_Price__c !=0,  Margin__c /Net_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Net_Price__c  - Item_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_QTY_of_Units_On_Single_Line_Item__c</fullName>
        <label>Max QTY of Units On Single Line Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Total_Material_Cost_for_Single_Line__c</fullName>
        <label>Max Total Material Cost for Single Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>FPA__r.Multiplier__c  *  List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <formula>SFO__r.Notes__c</formula>
        <label>Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY_of_line_Item_with_Specials__c</fullName>
        <label>QTY of line Item with Specials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFO</label>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipName>Related_SFO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>FPA__r.Sales_Person__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalMargin__c</fullName>
        <formula>IF(Total_Net_Price__c!=0, Total_Margin__c  /  Total_Net_Price__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Item_Cost__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>List_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>Total_Net_Price__c  -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Net_Price__c</fullName>
        <formula>FPA__r.Multiplier__c  *  Total_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Tag__c</fullName>
        <label>Unit Tag Dup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Unit Detail</label>
    <nameField>
        <label>Unit Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>